Fix uneven top for Safari (and iPhone)
Change Display inline-block to float left

--- a/sites/all/themes/zen_responsive/css/styles.css
+++ b/sites/all/themes/zen_responsive/css/styles.css
@@ -2495,11 +2495,10 @@ div#block-block-38 {
 .fp-nav-row {
   width: 170px;
   height: 300px;
-  float: none;
+  float: left;
   margin: 0 auto;
   padding: 0 5px 0 5px;
   overflow: hidden;
-  display: inline-block;
   text-align: center;
 }
 
